tests/ui/transmute-ptr-to-usize.nightly.stderr
error[E0277]: the trait bound `*const usize: IntoBytes` is not satisfied
  --> $DIR/transmute-ptr-to-usize.rs:18:30
   |
18 | const POINTER_VALUE: usize = transmute!(&0usize as *const usize);
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                              |
   |                              the trait `IntoBytes` is not implemented for `*const usize`
   |                              required by a bound introduced by this call
   |
   = note: Consider adding `#[derive(IntoBytes)]` to `*const usize`
help: the trait `IntoBytes` is implemented for `usize`
  --> src/util/macros.rs:29:8
  --> src/impls.rs:77:4
   |
   = note: in this macro invocation
note: required by a bound in `POINTER_VALUE::transmute`
  --> $DIR/transmute-ptr-to-usize.rs:18:30
   |
18 | const POINTER_VALUE: usize = transmute!(&0usize as *const usize);
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
